--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "6.15.0",
     "react-scripts": "5.0.1",
     "redux": "4.2.1",
     "redux-devtools-extension": "2.13.9",
